--- a/serverless.yml
+++ b/serverless.yml
@@ -7,8 +7,8 @@ plugins:
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: beta
-  region: us-east-1
+  stage: dev
+  region: us-west-1
 
 functions:
   app:
