--- a/serverless.yml
+++ b/serverless.yml
@@ -7,8 +7,9 @@ plugins:
 provider:
   name: aws
   runtime: nodejs6.10
-  stage: dev
-  region: us-west-1
+  stage: beta
+  region: us-east-1
+  timeout: 15 # optional, in seconds, default is 6
 
 functions:
   app:
